--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,11 +6,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #fca311   ;
-  --secondary-color: #000000 ;
-  --accent1-color: #cfdad6;
+  --primary-color: #396E94   ;
+  --secondary-color: #E7C24F ;
+  --accent1-color: #A42212;
   --accent2-color: white;
-
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
   --paragraph-font: Roboto, Helvetica, sans-serif;
