--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Rock+Salt&display=swap')
+;
 
 #content{
     max-width: 1600px;
