--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -122,7 +122,7 @@ background-color: grey;
 
 .msg p{
     background-color: grey;
-    color: wh;
+    color: white;
     font-size: .8em;
     padding-bottom: 15px;
 }
