--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -6,12 +6,41 @@
     margin: 0 auto;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+      
+
+
 nav a{
     text-align: center;
     color: white;
     text-decoration: none;
     padding: 35px;
 }
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+
+}
+
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+
 
 #hero-msg h1{
     text-align: center;
@@ -33,6 +62,9 @@ main section{
 #background{
     background-color: black;
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+
 }
 
 body{
@@ -46,6 +78,8 @@ body{
 header{
     background-color: grey;
     color: black;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a:hover{
@@ -90,8 +124,11 @@ nav a:hover{
     color: white;
     padding: 35px;
     line-height: 1.5em;
-
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+
 
 footer{
     background-color: grey;
@@ -126,6 +163,19 @@ background-color: grey;
     font-size: .8em;
     padding-bottom: 15px;
 }
+
+
+footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+    
+
+
 
 footer a{
     background-color: grey;
@@ -171,6 +221,8 @@ h2{
 
 #logo-link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img{
@@ -179,21 +231,102 @@ footer .social img{
 
 .rivers-card{
    margin: 200px 0;
+   grid-column: 2/4;
+   grid-row: 2/3;
 }
 
 
 .camping-card{
     margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
 } 
 
 
 .rapids-card{
     margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .card-img {
     border: 10px solid grey;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+
 }
+
+.card-img :hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
 main section img {
     box-sizing: border-box;
+
+}
+
+
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+
+
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
