--- a/positionstyles.css
+++ b/positionstyles.css
@@ -6,6 +6,10 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
   justify-items: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+
 }
 .red1 { 
   width: 100%; 
@@ -13,7 +17,7 @@
   background-color: red;
   grid-column: 1/3;
 
-  
+
 
 } 
 .green1 {
@@ -40,6 +44,10 @@
   display: grid;
   grid-template-columns: repeat(5, 50px);
   grid-template-rows: repeat(5, 50px);
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 
 }
 .red2 {
@@ -77,6 +85,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 100px;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
                                                                                                                   
   
 
@@ -91,17 +103,21 @@
   width: 100%; 
   height: 200px; 
   background-color: green;
+  grid-column: 1/2
+
 } 
 .yellow3 {
   width: 100%; 
   height: 200px; 
-  background-color: gold; 
+  background-color: gold;
+  grid-column: 2/3
 } 
 .blue3 {
   width: 100%; 
   height: 100px; 
   background-color: blue;
   grid-column: 1/3
+
 } 
 /* Activity 4 styles */ 
 .content4 {
