--- a/sorgborconsult/styles/site-plan.css
+++ b/sorgborconsult/styles/site-plan.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
   --accent2-color: #c6c6c6;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Permannent";
+  --heading-font: "Permanent marker";
   --paragraph-font: Roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
