--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -389,6 +389,24 @@ main section img {
 
 
 
+/* New CSS rule for Contact Us page */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -401,7 +419,7 @@ main section img {
 
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    #hero, .home-grid {00000000
         display: block;
         height: auto;
     }
