--- a/sorgborconsult/styles/style.css
+++ b/sorgborconsult/styles/style.css
@@ -3,7 +3,7 @@
 
 
  body {
-    background-color: white;
+    background-color: #396E94;
     color: black;
     font-family: oswald, roboto, permanent marker;
     margin: 0;
@@ -84,7 +84,7 @@ nav #para:hover {
 }
 
 #hero-msg {
-    color: black;
+    color: #A42212;
     font-size: 40px;
     grid-column: 2/3;
     grid-row: 1/2;
@@ -144,6 +144,7 @@ nav #para:hover {
 
 .home-head h2 {
     margin-top: 2px;
+    color: #A42212;
    
 }
 
@@ -155,7 +156,7 @@ nav #para:hover {
 
 .work1 {
     background-color: black;
-    color: white;
+    color: #FAD20C;
     font-size: 18px;
     padding: 10px 20px;
     margin-top: 75px; 
@@ -194,7 +195,6 @@ nav #para:hover {
 }
 
 .msg {
-    /* box-shadow: 10px 10px 20px grey; */
     box-sizing: border-box;
     position: absolute;
     bottom: 100%;
@@ -206,7 +206,7 @@ nav #para:hover {
 
 .join{
     background-color: black;
-    color: white;
+    color: #FAD20C;
     font-size: 18px;
     padding: 10px 20px;
     border-radius: 5px;
@@ -294,10 +294,44 @@ footer .logo {
 
 
 
-
-
-
-
-
-
-
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {00000000
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
