--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -419,7 +419,7 @@ main section img {
 
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {00000000
+    #hero, .home-grid 00000000
         display: block;
         height: auto;
     }
