--- a/sorgborconsult/styles/style.css
+++ b/sorgborconsult/styles/style.css
@@ -181,11 +181,19 @@ nav #para:hover {
     grid-column: 2/3;
     grid-row: 2/4;
     box-shadow: 10px 10px 20px black;
+    width: 100%;
     padding: 2px;
     height: 100px; 
     position: relative;
 
 }
+
+.businessmen {
+    height: 510px;
+
+}
+
+
 
 .home-pic h2{
     color: #A42212;
@@ -198,12 +206,18 @@ nav #para:hover {
     height: 300px;
 }
 
+.grp-img {
+    max-width:700px;
+    height: 510px;
+}
+
 .msg {
     box-sizing: border-box;
     position: absolute;
     bottom: 100%;
     top: 100%;
     margin-right: 10rem;
+    margin-left: 1rem ;
     
 } 
 
@@ -260,6 +274,7 @@ footer .logo {
     width: 100px;
     padding-top: 10px;
     padding-left: 130px;
+    height:100px;
 
 }
 
@@ -297,6 +312,184 @@ footer .logo {
 
 
 
+
+
+
+/* CSS style for Sub-Page*/
+#home-grid1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 20px;
+    box-sizing: border-box;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 20px;
+    box-sizing: border-box;
+    /* margin-left: 5px;
+    margin-right: 5px; */
+    /* grid-auto-rows: 150px; */
+    justify-content: center;  
+    width: 100%;
+    
+}
+
+#home-grid2 .one {
+    justify-content: center;
+    padding : 50px 50px;
+    margin-top: -50px;
+}
+
+
+.parent .two {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%; 
+    /* margin-left: 5px;
+    margin-right: 5px; */
+}
+
+ .parent .three {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%; 
+    /* margin-left: 5px;
+    margin-right: 5px; */
+} 
+
+/* 
+.parent .three {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
+}
+
+
+.parent .five {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
+}
+
+.parent .six {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
+}
+
+
+.parent .eight {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
+}
+
+.parent .nine {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
+}
+
+.parent .ten{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    box-sizing: border-box;
+    border: 1px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
+}  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {00000000
+        display: block;
+        height: auto;
+    }
+
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #A42212;
+    }
+    #about { 
+        margin: 50px auto;
+        width:100%;
+    }
+    #background {
+        display: none;
+    }
+    .home-grid, .msg {
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 
 
 
