--- a/sorgborconsult/styles/style.css
+++ b/sorgborconsult/styles/style.css
@@ -89,7 +89,7 @@ nav #para:hover {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 50px;
-    /* padding-left: 150px;  */
+    padding-left: 150px; 
     text-align: center;
 }
 
@@ -124,7 +124,7 @@ nav #para:hover {
     grid-template-rows: 2fr 1fr;
     grid-column-gap: 10px;
     grid-row-gap: 20px;
-    /* grid-auto-rows: 150px; */
+    grid-auto-rows: 150px; 
     justify-content: center;
     width: 100%;
     height: 500px; 
@@ -315,117 +315,153 @@ footer .logo {
 
 
 
-/* CSS style for Sub-Page*/
-#home-grid1 {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 20px;
-    box-sizing: border-box;
-    margin-left: 5px;
-    margin-right: 5px;
-}
 
-.parent {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS style for Sub-Page*/
+
+
+
+.one {
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 50px;   
+ }
+
+ .parent {
+    margin-left: 10px;
+    margin-right: 10px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 20px;
-    box-sizing: border-box;
-    /* margin-left: 5px;
-    margin-right: 5px; */
-    /* grid-auto-rows: 150px; */
-    justify-content: center;  
-    width: 100%;
-    
+    grid-template-rows: repeat(5, 1fr); 
+    gap: 20px 100px; 
+    max-width: 100%; 
+    height: 560px
 }
-
-#home-grid2 .one {
-    justify-content: center;
-    padding : 50px 50px;
-    margin-top: -50px;
-}
-
 
 .parent .two {
+    background-color: gray;
+    display: grid;
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 1/2; 
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 100%; 
-    /* margin-left: 5px;
-    margin-right: 5px; */
+    max-width: 700px; 
+    margin-left: 40px;  
+    height: 90px;
+
 }
 
- .parent .three {
+.parent .three {
+    background-color: gray;
     grid-column: 2/3;
-    grid-row: 1/2;
+    grid-row: 1/2; 
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 100%; 
-    /* margin-left: 5px;
-    margin-right: 5px; */
+    max-width: 700px; 
+    margin-right: 40px;
+    height: 90px;
+
 } 
 
-/* 
-.parent .three {
+.parent .four {
+    background-color: gray;
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 2/3;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 100%;
-}
-
+    max-width: 700px; 
+    margin-left: 40px;
+    height: 90px; 
+    
+} 
 
 .parent .five {
-    grid-column: 1/2;
-    grid-row: 1/2;
+    background-color: gray;
+    grid-column: 2/3;
+    grid-row: 2/3; 
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 100%;
-}
+    max-width: 700px; 
+    margin-right: 40px;
+    height: 115px;
+} 
+
 
 .parent .six {
+    background-color: gray;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    box-sizing: border-box;
+    border: 2px solid #FAD20C;
+    box-sizing: border-box;
+    max-width: 700px; 
+    margin-right: 40px; 
+    height: 115px;
+} 
+
+.parent .seven {
+    background-color: gray;
     grid-column: 1/2;
-    grid-row: 1/2;
+    grid-row: 3/4;
     box-sizing: border-box;
-    border: 1px solid black;
-    box-sizing: border-box;
-    max-width: 100%;
-}
+    border: 2px solid #FAD20C;
+    max-width: 700px; 
+    height: 210px;
+    margin-left: 40px;
+
+}  
 
 
 .parent .eight {
+    background-color: gray;
     grid-column: 1/2;
-    grid-row: 1/2;
-    box-sizing: border-box;
-    border: 1px solid black;
-    box-sizing: border-box;
-    max-width: 100%;
+    grid-row: 4/5;
+    max-width: 700px; 
+    margin-left: 40px; 
+    margin-bottom: 300px;
+    margin-top: -100px;
+    border: 2px solid black;
+} 
+
+.parent .eight p {
+    margin-top: -100;
+    color: whitesmoke
 }
 
-.parent .nine {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    box-sizing: border-box;
-    border: 1px solid black;
-    box-sizing: border-box;
-    max-width: 100%;
+
+.contact-pp{
+    background-color: #A42212;
+    color: #FAD20C;
+    font-size: 18px;
+    border-radius: 5px;
+    
 }
 
-.parent .ten{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    box-sizing: border-box;
-    border: 1px solid black;
-    box-sizing: border-box;
-    max-width: 100%;
-}  */
+
+.contact-pp:hover{
+    background-color: #FAD20C;
+    color: blue;
+    text-decoration: underline;
+}
 
 
 
@@ -434,7 +470,44 @@ footer .logo {
 
 
 
+.first-img {
+    grid-column: 2/3;
+    grid-row: 3/4; 
+    margin-top: 130px;
+    width: 550px;
+    margin-right: -40px;
+    height: 200px;
+    box-shadow: 10px 10px 30px black;
+    transition: transform .5s;
 
+}
+
+
+
+.first-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+
+}
+
+
+.second-img {
+    grid-column: 2/3;
+    grid-row: 4/5; 
+    height: 200px;
+    width: 550px;
+    margin-right: -40px;
+    box-shadow: 10px 10px 30px black;
+    transition: transform .5s;
+
+}
+
+
+.second-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+
+}
 
 
 
