--- a/sorgborconsult/styles/style.css
+++ b/sorgborconsult/styles/style.css
@@ -332,7 +332,7 @@ footer .logo {
 
 
 
-/* CSS style for Sub-Page*/
+/* CSS style for Sub-Page1*/
 
 
 
@@ -360,7 +360,6 @@ footer .logo {
     grid-row: 1/2; 
     box-sizing: border-box;
     border: 2px solid #FAD20C;
-    box-sizing: border-box;
     max-width: 700px; 
     margin-left: 40px;  
     height: 90px;
@@ -373,7 +372,6 @@ footer .logo {
     grid-row: 1/2; 
     box-sizing: border-box;
     border: 2px solid #FAD20C;
-    box-sizing: border-box;
     max-width: 700px; 
     margin-right: 40px;
     height: 90px;
@@ -508,6 +506,176 @@ footer .logo {
     transform: scale(1.1);
 
 }
+
+
+
+
+
+
+
+
+
+/* CSS style for Sub-Page3*/
+
+ #hero1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 900px;
+} 
+
+#hero-box1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+} 
+
+#hero-msg1 {
+    color: #A42212;
+    font-size: 40px;
+    margin-top: -900px;
+    text-align: center;
+}
+
+#hero-img1 {
+    background-image: url("happy-employer.jpg");
+}
+
+
+#hero-img1 {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+#hero-msg1 h1 {
+    text-align: center;
+    
+}
+
+
+.home-grid1 {
+    display: grid;
+    grid-template-columns: 1fr ;
+    grid-template-rows: 1fr;
+
+}
+
+
+
+
+
+#ceo {
+    grid-column: 2/4;
+    grid-row: 1/2;
+    background-color: gray;
+    box-sizing: border-box;
+    border: 2px solid black;
+    margin-top: -700px;
+    margin-right: 600px;
+    width: 90%;
+    height: 350px; 
+}
+
+
+
+.my-img {
+    margin-top: 20px;
+    text-align: center;
+    
+}   
+
+
+
+.cont1 {
+    text-align: center;
+    margin-top: -20px;
+}
+
+
+.cont1 p {
+    color: #A42212;
+}
+
+.cont1 h4 {
+    color: #FAD20C;
+}
+ .cont1 h4:hover {
+    color: #A42212;
+    text-decoration: underline;
+
+ }
+
+
+
+.contact {
+    background-color: gray;
+    grid-column: 1/3;
+    grid-row: 2/3;
+    box-sizing: border-box;
+    border: 2px solid black;
+    width: 60%;
+    margin-left: 100px; 
+    height: 400px;
+    margin-top: -300px;
+}
+
+#feedback {
+    background-color: gray;
+    grid-column: 1/3;
+    grid-row: 2/3;
+    box-sizing: border-box;
+    border: 2px solid black;
+    width: 90%;
+    margin-left: 30px; 
+    height: 200px;
+    margin-top: 40px;
+    
+}
+
+.contact h3 {
+    color: #A42212;
+    margin-left: 30px;
+}
+
+.contact p {
+    margin-left: 30px;
+    /* text-align: center; */
+}
+
+
+
+.details {
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.your-email {
+    margin-top: 30px;
+}
+
+.your-msg {
+    margin-top: 30px;
+}
+
+
+.button {
+    text-align: right;
+    margin-right: 50px;
+    margin-top: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
