--- a/sorgborconsult/styles/style.css
+++ b/sorgborconsult/styles/style.css
@@ -75,6 +75,7 @@ nav #para:hover {
 #hero-img {
     width: 100%;
     height: 20rem;
+    max-width: 100%;
 }
 
 #hero-box{
@@ -121,7 +122,7 @@ nav #para:hover {
 .grid-container { 
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 2fr auto;
     grid-column-gap: 10px;
     grid-row-gap: 20px;
     grid-auto-rows: 150px; 
@@ -139,7 +140,7 @@ nav #para:hover {
     height: 200px;
     border: 1px solid black;
     box-sizing: border-box;
-    max-width: 100%; 
+    /* max-width: 100%;  */
 }
 
 .home-head h2 {
@@ -184,6 +185,7 @@ nav #para:hover {
     width: 100%;
     padding: 2px;
     height: 100px; 
+    max-width: 100%;
     position: relative;
 
 }
@@ -209,6 +211,7 @@ nav #para:hover {
 .grp-img {
     max-width:700px;
     height: 510px;
+    
 }
 
 .msg {
@@ -311,7 +314,6 @@ footer .logo {
 /* CSS style for Sub-Page1*/
 
 
-
 .one {
     text-align: center;
     margin-left: 50px;
@@ -323,10 +325,10 @@ footer .logo {
     margin-right: 10px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 1fr); 
-    gap: 20px 100px; 
+    grid-template-rows: repeat(5, auto); 
+    gap: 20px 50px; 
     max-width: 100%; 
-    height: 560px
+    /* height: 560px */
 }
 
 .parent .two {
@@ -336,9 +338,9 @@ footer .logo {
     grid-row: 1/2; 
     box-sizing: border-box;
     border: 2px solid #FAD20C;
-    max-width: 700px; 
+    /* max-width: 700px; 
     margin-left: 40px;  
-    height: 90px;
+    height: 90px; */
 
 }
 
@@ -348,9 +350,9 @@ footer .logo {
     grid-row: 1/2; 
     box-sizing: border-box;
     border: 2px solid #FAD20C;
-    max-width: 700px; 
+    /* max-width: 700px; 
     margin-right: 40px;
-    height: 90px;
+    height: 90px; */
 
 } 
 
@@ -361,9 +363,9 @@ footer .logo {
     box-sizing: border-box;
     border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 700px; 
+    /* max-width: 700px; 
     margin-left: 40px;
-    height: 90px; 
+    height: 90px;  */
     
 } 
 
@@ -374,9 +376,9 @@ footer .logo {
     box-sizing: border-box;
     border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 700px; 
+    /* max-width: 700px; 
     margin-right: 40px;
-    height: 115px;
+    height: 115px; */
 } 
 
 
@@ -387,9 +389,9 @@ footer .logo {
     box-sizing: border-box;
     border: 2px solid #FAD20C;
     box-sizing: border-box;
-    max-width: 700px; 
+    /* max-width: 700px; 
     margin-right: 40px; 
-    height: 115px;
+    height: 115px; */
 } 
 
 .parent .seven {
@@ -398,29 +400,32 @@ footer .logo {
     grid-row: 3/4;
     box-sizing: border-box;
     border: 2px solid #FAD20C;
-    max-width: 700px; 
+    /* max-width: 700px; 
     height: 210px;
-    margin-left: 40px;
+    margin-left: 40px; */
 
 }  
 
 
 .parent .eight {
     background-color: gray;
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 4/5;
-    max-width: 700px; 
+    /* max-width: 700px; 
     margin-left: 40px; 
     margin-bottom: 300px;
-    margin-top: -100px;
+    margin-top: -100px; */
     border: 2px solid black;
 } 
 
 .parent .eight p {
-    margin-top: -100;
+    margin-top: -100px;
     color: whitesmoke
 }
 
+.parent div {
+    padding: 0 10px;
+}
 
 .contact-pp{
     background-color: #A42212;
@@ -445,14 +450,15 @@ footer .logo {
 
 
 .first-img {
-    grid-column: 2/3;
-    grid-row: 3/4; 
-    margin-top: 130px;
+    grid-column: 1/2;
+    grid-row: 5/6; 
+    /* margin-top: 130px;
     width: 550px;
     margin-right: -40px;
-    height: 200px;
+    height: 200px; */
     box-shadow: 10px 10px 30px black;
     transition: transform .5s;
+    max-width: 100%;
 
 }
 
@@ -467,12 +473,13 @@ footer .logo {
 
 .second-img {
     grid-column: 2/3;
-    grid-row: 4/5; 
-    height: 200px;
+    grid-row: 5/6; 
+    /* height: 200px;
     width: 550px;
-    margin-right: -40px;
+    margin-right: -40px; */
     box-shadow: 10px 10px 30px black;
     transition: transform .5s;
+    max-width: 100%;
 
 }
 
@@ -513,12 +520,14 @@ footer .logo {
 
 #hero-img1 {
     background-image: url("happy-employer.jpg");
+    max-width: 100%;
 }
 
 
 #hero-img1 {
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
+    max-width: 100%;
 }
 
 
@@ -559,6 +568,7 @@ footer .logo {
 .my-img {
     margin-top: 20px;
     text-align: center;
+    max-width: 100%;
     
 }   
 
@@ -666,7 +676,7 @@ footer .logo {
 
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {00000000
+    #hero, .home-grid {
         display: block;
         height: auto;
     }
@@ -703,9 +713,7 @@ footer .logo {
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
-
-
-
